--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
@@ -35,6 +36,7 @@
     "@ionic/pwa-elements": "^3.2.2",
     "bootstrap": "^5.3.1",
     "cordova-plugin-file-opener2": "^4.0.0",
+    "firebase-tools": "^12.7.0",
     "ionicons": "^7.0.0",
     "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
