--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
     "@capacitor/ios": "5.2.2",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@ionic-native/core": "^5.36.0",
     "@ionic-native/file-opener": "^5.36.0",
+    "@ionic-native/geolocation": "^5.36.0",
     "@ionic/angular": "^7.0.0",
     "@ionic/pwa-elements": "^3.2.2",
+    "@types/google-maps": "^3.2.4",
     "bootstrap": "^5.3.1",
     "cordova-plugin-file-opener2": "^4.0.0",
+    "cordova-plugin-geolocation": "^5.0.0",
     "firebase-tools": "^12.7.0",
     "ionicons": "^7.0.0",
     "pdfmake": "^0.2.7",
