--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.2.2",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/file-opener": "^5.36.0",
