--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@capacitor/ios": "5.2.2",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/splash-screen": "^5.0.6",
-    "@capacitor/status-bar": "5.0.6",
+    "@capacitor/status-bar": "^5.0.6",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/file-opener": "^5.36.0",
     "@ionic-native/geolocation": "^5.36.0",
